--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header {
-  height: 100vh;
+  height: 850px;
   padding-top: 7rem;
   overflow: hidden;
 }
@@ -65,7 +65,7 @@ header {
 /* Media Queries (Medium Devices) */
 @media screen and (max-width: 1024px) {
   header {
-    height: 68vh;
+    height: 850px;
   }
 
 }
@@ -73,7 +73,7 @@ header {
 /* Media Queries (Small Devices) */
 @media screen and (max-width: 600px) {
   header {
-    height: 100vh;
+    height: 1000px;
   }
 
   .header__socials,
