--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 
 /* Css Variables */
 :root {
+  
   --color-bg: #1f1f38;
   --color-bg-variant: #2c2c6c;
   --color-primary: #4db5ff;
@@ -65,6 +66,7 @@ h1{
 
 section{
   margin-top: 8rem;
+  height: 100vh;
 }
 
 section > h2, section > h5 {
