--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -40,3 +40,23 @@
   color: var(--color-primary);
 
 }
+
+@media screen and (max-width: 1024px){
+ .experience__container{
+   grid-template-columns: 1fr;
+ }
+
+
+}
+
+/* Media Queries (Small Devices) */
+@media screen and (max-width: 600px){
+  .experience__container{
+    gap: 1rem;
+  }
+  
+  .experience__container > div {
+    width: 100%;
+    padding: 2rem;
+  }
+}
