--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@
 :root {
   
   --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-primary: #4db5ff;
+  --color-bg-variant: #313140;
+  --color-primary: #eff8ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
