--- a/src/components/colorbar/colorbar.css
+++ b/src/components/colorbar/colorbar.css
@@ -2,7 +2,7 @@
   background: rgba(73, 73, 73, 0.3);
   width: max-content;
   display: block;
-  padding: 0.7rem 1.7rem;
+  padding: 0.5rem 1rem;
   z-index: 2;
   position: fixed;
   left: 50%;
@@ -16,11 +16,20 @@
 
 .colorbar i {
   background: transparent;
-  padding: 0.9rem;
+  padding: 0.7rem;
   border-radius: 50%;
   display: flex;
-  color: var(--color-light);
   font-size: 1.3rem;
+}
+
+.colorbar #red{
+  color: rgb(250, 134, 134);
+}
+.colorbar #blue{
+  color: rgb(134, 200, 250);
+}
+.colorbar #green{
+  color: rgb(134, 250, 182);
 }
 
 
