--- a/src/components/colorbar/colorbar.css
+++ b/src/components/colorbar/colorbar.css
@@ -4,7 +4,7 @@
   display: block;
   padding: 0.5rem 1rem;
   z-index: 2;
-  position: fixed;
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
   top: 2rem;
