--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,8 @@
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
 
+  /* --background-image: url(../src/assets/bg-texture.png); */
+
   --transition: all 400ms ease;
 
   --container-width-lg: 75%;
@@ -30,30 +32,32 @@
 }
 
 [data-theme='dark']{
-  --color-bg: #1f1f38;
+  --color-bg: #020202;
   --color-bg-variant: #313140;
   --color-primary: #eff8ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
+  
 }
 
 [data-theme='red']{
-  --color-bg: #33161b;
-  --color-bg-variant: #3d0411b6;
-  --color-primary: #de304a;
-  --color-primary-variant: rgba(255, 77, 107, 0.4);
+  --color-bg: #174950;
+  --color-bg-variant: #008080;
+  --color-primary: #E60234;
+  --color-primary-variant: #8B0F32;
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
+  /* --background-image: url(../src/assets/red-bg-texture.png); */
 }
 
 [data-theme='blue']{
-  --color-bg: #040d40;
-  --color-bg-variant: #101953;
-  --color-primary: #4c60fa;
-  --color-primary-variant: rgba(58, 170, 250, 0.668);
+  --color-bg: #00249E;
+  --color-bg-variant: #97d9fc;
+  --color-primary: #F8F8F8;
+  --color-primary-variant: #010000;
   --color-white: #fff;
-  --color-light: rgba(255, 255, 255, 0.6);
+  --color-light: rgb(255, 255, 255);
 }
 
 [data-theme='green']{
@@ -78,7 +82,7 @@ body{
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/bg-texture.png);
+  /* background-image: var(--background-image); */
 }
 
 /* General Styles */
