Resume update to most recent, plus styling to resume button.
pdf button opens pdf in new tab.

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap");
 
 /* font-family: 'Montserrat', sans-serif; */
 
@@ -14,7 +14,6 @@
 
 /* Css Variables */
 :root {
-  
   --color-bg: #1f1f38;
   --color-bg-variant: #313140;
   --color-primary: #eff8ff;
@@ -31,36 +30,35 @@
   --container-width-sm: 90%;
 }
 
-[data-theme='dark']{
+[data-theme="dark"] {
   --color-bg: #020202;
   --color-bg-variant: #313140;
   --color-primary: #eff8ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
-  
 }
 
-[data-theme='red']{
+[data-theme="red"] {
   --color-bg: #174950;
   --color-bg-variant: #008080;
-  --color-primary: #E60234;
-  --color-primary-variant: #8B0F32;
+  --color-primary: #e60234;
+  --color-primary-variant: #8b0f32;
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
   /* --background-image: url(../src/assets/red-bg-texture.png); */
 }
 
-[data-theme='blue']{
-  --color-bg: #00249E;
+[data-theme="blue"] {
+  --color-bg: #00249e;
   --color-bg-variant: #97d9fc;
-  --color-primary: #F8F8F8;
+  --color-primary: #f8f8f8;
   --color-primary-variant: #010000;
   --color-white: #fff;
   --color-light: rgb(255, 255, 255);
 }
 
-[data-theme='green']{
+[data-theme="green"] {
   --color-bg: #092015;
   --color-bg-variant: #053d2a;
   --color-primary: #7ee28fdd;
@@ -69,16 +67,16 @@
   --color-light: rgba(255, 255, 255, 0.6);
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
-body{
-  font-family: 'Montserrat', sans-serif;
+body {
+  font-family: "Montserrat", sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
@@ -86,7 +84,7 @@ body{
 }
 
 /* General Styles */
-.container{
+.container {
   width: var(--container-width-lg);
   margin: 0 auto;
 }
@@ -99,15 +97,16 @@ h5 {
   font-weight: 500;
 }
 
-h1{
+h1 {
   font-size: 2.5rem;
 }
 
-section{
+section {
   margin-top: 8rem;
 }
 
-section > h2, section > h5 {
+section > h2,
+section > h5 {
   text-align: center;
   color: var(--color-light);
 }
@@ -117,20 +116,26 @@ section > h2 {
   margin-bottom: 3rem;
 }
 
-.text-light{
-  color: var(--color-light); 
+.text-light {
+  color: var(--color-light);
 }
 
-a{
+a {
   color: var(--color-primary);
   transition: var(--transition);
 }
 
-a:hover{
+a:hover {
   color: var(--color-white);
 }
 
-.btn{
+.resume-btn {
+  font-family: "Montserrat", sans-serif;
+  background-color: transparent;
+  font-size: 1rem;
+}
+
+.btn {
   width: max-content;
   display: inline-block;
   color: var(--color-primary);
@@ -141,41 +146,41 @@ a:hover{
   transition: var(--transition);
 }
 
-.btn:hover{
+.btn:hover {
   background: var(--color-white);
   color: var(--color-bg);
   border-color: transparent;
 }
 
-.btn-primary{
+.btn-primary {
   background: var(--color-primary);
   color: var(--color-bg);
 }
 
-img{
+img {
   display: block;
-  width:100%;
+  width: 100%;
   object-fit: cover;
 }
 
 /* Media Queries (Medium Devices) */
-@media screen and (max-width: 1024px){
-  .container{
+@media screen and (max-width: 1024px) {
+  .container {
     width: var(--container-width-md);
   }
 
-  section{
+  section {
     margin-top: 6rem;
   }
 }
 
 /* Media Queries (Small Devices) */
-@media screen and (max-width: 600px){
-  .container{
+@media screen and (max-width: 600px) {
+  .container {
     width: var(--container-width-sm);
   }
 
-  section{
+  section {
     margin-bottom: 2rem;
   }
 }
