--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,7 @@ a:hover {
   color: var(--color-primary);
   padding: 0.75rem 1.2rem;
   border-radius: 0.4rem;
+  text-align: center;
   cursor: pointer;
   border: 1px solid black;
   transition: var(--transition);
